@@ -2444,3 +2444,4 @@ ruthless programmer, and sentenced to a quick death.
 1. CoffeeMud and MiniWebServer are now integrated -- this means a much faster and better web service all around.
 ^^^Check out the altered WebServer guide, and make sure you integrate the pub.ini, admin.ini, and common.ini if you customized them.
 2. Character Classes now use formulas for mana, movement, and hit point gains/losses.
+3. Character Class race/stat requirements can now be modified separately from qualifications mask.  Race qualifications shown in help now.
